src/objects/Reserved_Queues_With_PlanId__mdt.object
<CustomObject>
    <fields>
        <fullName>Plan_Id__c</fullName>
        <label>Plan Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queue_Name__c</fullName>
        <label>Queue Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queue_Priority__c</fullName>
        <label>Queue Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role_Developer_Names__c</fullName>
        <label>Role Developer Names</label>
        <type>TextArea</type>
    </fields>
    <label>Reserved Queues With PlanId</label>
    <pluralLabel>Reserved Queues With PlanIds</pluralLabel>
</CustomObject>